# oavp_ros

./: .ci.rosinstall  CMakeLists.txt  README.md  oavp.rosinstall  package.xml
.github/workflows/: main.yaml
launch/: aws_detect_faces.launch  oavp.launch
