<?xml version="1.0"?>
<package format="2">
  <name>oavp_ros</name>
  <version>2.1.21</version>
  <description>Omni Audio Visual Package for ROS</description>

  <maintainer email="tsukamoto@jsk.imi.i.u-tokyo.ac.jp">Naoto Tsukamoto</maintainer>

  <author email="tsukamoto@jsk.imi.i.u-tokyo.ac.jp">Naoto Tsukamoto</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
