<?xml version="1.0"?>
<package format="2">
  <name>oavp_ros</name>
  <version>2.1.21</version>
  <description>Omni Audio Visual Package for ROS</description>

  <maintainer email="tsukamoto@jsk.imi.i.u-tokyo.ac.jp">Naoto Tsukamoto</maintainer>

  <author email="tsukamoto@jsk.imi.i.u-tokyo.ac.jp">Naoto Tsukamoto</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>audio_capture</exec_depend>
  <exec_depend>julius_ros</exec_depend>
  <exec_depend>jsk_perception</exec_depend>
  <exec_depend>respeaker_ros</exec_depend>
  <exec_depend>ros_speech_recognition</exec_depend>
  <exec_depend>webrtcvad_ros</exec_depend>

  <export>
  </export>
</package>
